2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (sim_esim_have_required_params): Provide default values for
	num_rows, num_cols and coreid if none are specified.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim-int.h (es_state): Add session_name member.
	* esim/esim.c (es_init_impl): Add session_name parameter.
	(es_init): Likewise.
	(es_client_connect): Likewise.
	* esim/esim.h (es_init): Update prototype.
	(es_client_connect): Update prototype.
	* sim-if.c (EPIPHANY_OPTIONS): Add E_OPTION_SESSION_NAME enum.
	(emesh_params): Rename mesh_add_ext_ram from epiphany_add_ext_ram,
	change to uint64_t type. Add session_name member.
	(epiphany_option_handler): Add null check for arg. Add case for
	E_OPTION_SESSION_NAME.
	(sim_esim_have_required_params): Fix help strings for
	--e-num-cols and --e-num-rows.
	(sim_esim_params_from_xml): Likewise.
	(sim_esim_init): Fix setting ext_ram_base.
	(sim_open): Adjust for name change to emesh_params.mesh_add_ext_ram

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in: Add missing esim dependencies.
	* esim/esim-int.h (ES_ADDR_IS_EXT_RAM): Fix check when
	external RAM includes top memory byte.
	* esim/esim.c (es_tx_one_shm_store): Change to PCADDR
	type for i and invalidate.
	(es_validate_cluster_cfg): Fix external ram overflow check.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-sim.h: Change function prototypes to unsigned
	types for register values.
	* epiphany.c (epiphanybf_set_status): Use USI type for
	register values.
	(epiphanybf_set_debugcmd): Likewise.
	(epiphanybf_set_resetcore): Likewise.
	(epiphany_gie): Likewise.
	(epiphany_trap): Likewise.
	(epiphany_testset): Likewise.
	* traps.c (USI epiphany_rti): Likewise.

2015-10-22  Ola Jeppsson  <ola@adapteva.com>

	* configure: Regenerate.

2015-10-22  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac (SIM_AC_OPTION_ALIGNMENT): Set 64-bit address word
	bitsize.
	* sim-main.h (CIA_ADDR): Define.
	(INVALID_INSTRUCTION_ADDRESS): Define.