@@ -131,23 +131,23 @@ static const OPTION options_epiphany[] =
   /* coreid is determined from MPI rank */
 #else
   { {"e-coreid", required_argument, NULL, E_OPTION_COREID},
-      '\0', "COREID", "Set coreid",
+      '\0', "COREID", "Set coreid. Default is 0x808.",
       epiphany_option_handler  },
 #endif
   { {"e-cols", required_argument, NULL, E_OPTION_NUM_COLS},
-      '\0', "n", "Number of core columns",
+      '\0', "n", "Number of core columns. Default is 1.",
       epiphany_option_handler  },
   { {"e-rows", required_argument, NULL, E_OPTION_NUM_ROWS},
-      '\0', "n", "Number of core rows",
+      '\0', "n", "Number of core rows. DEFAULT is 1.",
       epiphany_option_handler  },
   { {"e-first-core", required_argument, NULL, E_OPTION_FIRST_CORE},
       '\0', "COREID", "Coreid of upper leftmost core",
       epiphany_option_handler  },
   { {"e-ext-ram-base", required_argument, NULL, E_OPTION_EXT_RAM_BASE},
-      '\0', "address", "Base address of external RAM",
+      '\0', "address", "Base address of external RAM. Default is 0x8e000000.",
       epiphany_option_handler  },
   { {"e-ext-ram-size", required_argument, NULL, E_OPTION_EXT_RAM_SIZE},
-      '\0', "MB", "Size of external RAM in MB",
+      '\0', "MB", "Size of external RAM in MB. Default is 32 MB.",
       epiphany_option_handler  },
   { {"e-session-name", required_argument, NULL, E_OPTION_SESSION_NAME},
       '\0', "NAME", "Set the session name. Use this option when you want to run separate simulations concurrently without clashing, or if you want to connect clients to a one-core simulation.",
